--- a/Node_BBS_V3/public/html/index06.html
+++ b/Node_BBS_V3/public/html/index06.html
@@ -12,7 +12,7 @@
       }
 
       section.main {
-        /* 
+        /*
         내용물이 있으면 크기를 늘려서 최대 800px 까지만
         */
         max-width: 800px;
@@ -60,7 +60,16 @@
         transition: 0.7s;
         color: yellow;
       }
+      article.img_box {
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+      }
 
+      img.img_slide {
+        transition: 2s;
+        width: 100%;
+      }
       span.badge {
         margin: 3px;
       }
@@ -91,6 +100,7 @@
       let slideIndex = 1;
       const control_box = document.querySelector("article.control_box");
       const badge_box = document.querySelector("div.badge_box");
+      const image_box = document.querySelector("article.img_box");
       const img = document.querySelector("img.img_slide");
       img.src = "/images/image_1.jpg";
 
@@ -103,7 +113,34 @@
       ];
 
       const imageActive = (pos) => {
-        img.src = imgList[pos - 1];
+        // 새롭게 추가된 img tag 를 SELECT 하여
+        // animation 을 구현하기 위한 코드
+        // 이 코드는 반드시 함수(imageActive) 내에서 실행되어야 한다
+        const oldImage = document.querySelector("img.img_slide");
+        // img.src = imgList[pos - 1];
+        //oldImage.style.transform = "rotate(-90deg)";
+        oldImage.style.marginLeft = "-100%";
+        oldImage.style.opacity = "0";
+
+        const nextImage = document.createElement("IMG");
+        nextImage.className = "img_slide";
+        nextImage.src = imgList[pos - 1];
+        image_box.appendChild(nextImage);
+
+        const imgeRemove = () => {
+          /*
+          만약 article.img_box 내부에 다수의 img tag 가 있을 경우 
+          querySelector() 로 SELECT 를 하면 
+          맨 처음 img tag 만 선택된다 
+          위의 코드에서 원래 있던 img tag 아래에 새로운 img tag를 
+          생성하여 appendChild 하였다.
+
+          그러면 아래의 코드는 새로 appendChild 된 tag 는 그대로 두고 
+          원래 있던 img tag 만 삭제하여 한개의 img tag ㅁ나 남겨두기 
+          */
+          document.querySelector("article.img_box img").remove();
+        };
+        setTimeout(imgeRemove, 1000);
       };
       const badgeActive = (pos) => {
         const dots = badge_box.querySelectorAll("span.badge");
